--- a/service.html
+++ b/service.html
@@ -37,6 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
+
           </a>
 
           <div class="navbar-collapse" id="">
@@ -62,50 +63,96 @@
     <!-- end header section -->
   </div>
 
-
-  <!-- contact section -->
-  <section class="contact_section layout_padding">
+  <!-- service section -->
+  <section class="service_section layout_padding">
     <div class="container">
-      <h2 class=" text-uppercase mb-4">
-        Contact Us
-      </h2>
-      <div class="row">
-        <div class="col-md-6 ">
-          <form action="">
-            <div class="contact_form-container">
-              <div>
-                <div>
-                  <input type="text" placeholder="Name" />
-                </div>
-                <div>
-                  <input type="text" placeholder="Phone Number" />
-                </div>
-                <div>
-                  <input type="email" placeholder="Email" />
-                </div>
-
-                <div class="">
-                  <input type="text" class="message-input" placeholder="Message" />
-                </div>
-                <div class="mt-5">
-                  <button type="submit">
-                    Send
-                  </button>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-6">
-          <div class="map_container">
-            <div id="map" class="h-100 w-100 "></div>
+      <div class="heading_container">
+        <h2>
+          our services
+        </h2>
+        <p>
+          There are many variations of passages of Lorem Ipsum
+        </p>
+      </div>
+      <div class="service_container">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/cabinet.png" alt="">
           </div>
-
+          <div class="detail-box">
+            <h5>
+              furnitures
+            </h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the
+            </p>
+            <div>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/interior-design.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              office
+            </h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the
+            </p>
+            <div>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/home.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              home
+            </h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the
+            </p>
+            <div>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/stairs.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              bedroom
+            </h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the
+            </p>
+            <div>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- end contact section -->
+  <!-- end service section -->
+
+
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container links_container">
